<resources>
    <string name="app_name">Evangelion 3.0</string>
    <string name="title_home">  </string>
    <string name="title_dashboard">  </string>
    <string name="title_notifications">  </string> <!-- a borrar -->

    <string name="correoInput">Correo Eléctronico</string>
    <string name="passwordInput">Contraseña</string>
    <string name="forgottenPassword">Olvidé mi contraseña</string>
    <string name="signUp">Registrarse</string>
    <string name="logIn">Iniciar sesión</string>
    <string name="nameInput">Nombre de usuario</string>
    <string name="recoverPassword">Generar nueva contraseña</string>
    <string name="tasks">Tareas</string>
    <string name="task">Tarea</string>
    <string name="titleTask">Nombre</string>
    <string name="descriptionTask">Descripción</string>
    <string name="fechaTask">Fecha</string>
    <string name="prioridadTask">Prioridad</string>
    <string name="categoriaTask">Categoria</string>
    <string name="terminarButton"> 🚩 Terminar</string>
    <string name="agregarButton">➕</string>
    <string name="estadisticasButton">📈</string>
    <string name="configuracionButton">⚙️</string>
    <string name="eliminarButton">🗑️</string>
    <string name="actualizarButton">✏️</string>
    <string name="terminarTareaButton">Terminar tarea</string>
    <string name="titutloAgregarTarea">Agregar tarea</string>
    <string name="tituloEditarTarea">Editar tarea</string>
    <string name="tituloConfiguracion">Configuración</string>
    <string name="tituloEstadisticas">Estadísticas</string>

    <string name="upArrow">^</string>
    <!--    descripcion de las tareas-->
    <string name="titutloActualizarTarea">Actualizar tarea</string>
    <string name="taskTitle">Título de la tarea</string>
    <string name="taskDescription">Descripción</string>
    <string name="categories">Categoría</string>
    <string name="withDeadline">Sin fecha límite</string>
    <string name="deadline">Fecha límite:</string>
    <string-array name="taskPriorities">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <!--    fin edicion de las tareas-->


    <!--    configuracion-->
    <string name="showTasksTittle">Mostrar tareas por:</string>
    <string name="showFinishedTasks">Mostrar tareas terminadas:</string>
    <string name="category_hint">Categoría:</string>
    <string name="search">Buscar:</string>

    <!--    Estadisticas-->
    <string name="YearStatsTittle">Tareas terminadas al año:</string>
    <string name="MonthStatsTittle">Tareas terminadas al mes:</string>
    <string name="WeekStatsTittle">Tareas terminadas a la semana:</string>
    <string name="FinishedVsUnfinishedTittle">Tareas terminadas vs sin terminar:</string>
    <string name="CompletedTasksOverTime">Tareas terminadas sobre tiempo:</string>



</resources>