<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:orientation="vertical"
    android:background="@color/purpleBackground"
    android:padding="10dp"
    >

    <TextView
        android:id="@+id/tituloTaskTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/titleTask"
        android:layout_marginLeft="@dimen/horizontalMargin"
        android:layout_marginRight="@dimen/horizontalMargin"
        android:layout_marginTop="@dimen/marginTopComponents"
        />

    <TextView
        android:id="@+id/descripcionTaskTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/descriptionTask"
        android:layout_marginLeft="@dimen/horizontalMargin"
        android:layout_marginRight="@dimen/horizontalMargin"
        android:layout_marginTop="@dimen/marginTopComponents"
        android:maxLines="2"
        android:ellipsize="end"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fechaTaskTextView"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="italic"
            android:text="@string/fechaTask"
            android:layout_marginLeft="@dimen/horizontalMargin"
            />

        <Button
            android:text="@string/terminarButton"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:background = "@drawable/round_button"
            android:layout_marginTop="@dimen/marginTopComponents"
            />

    </LinearLayout>
</LinearLayout>