<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUp">


    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/horizontalMargin"
        android:layout_marginRight="@dimen/horizontalMargin"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:hint="@string/nameInput"
        android:textSize="@dimen/textInputSize"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/horizontalMargin"
        android:layout_marginRight="@dimen/horizontalMargin"
        android:layout_marginTop="@dimen/marginTopComponents"
        android:ems="10"
        android:hint="@string/correoInput"
        android:textSize="@dimen/textInputSize"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/horizontalMargin"
        android:layout_marginRight="@dimen/horizontalMargin"
        android:layout_marginTop="@dimen/marginTopComponents"
        android:layout_marginBottom="80dp"
        android:ems="15"
        android:hint="@string/passwordInput"
        android:textSize="@dimen/textInputSize"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="237dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/marginTopComponents"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/round_button"
        android:text="@string/signUp"
        android:textColor="@color/white"
        android:textSize="@dimen/textInputSize"
        android:foreground="?attr/selectableItemBackground"
        />

</LinearLayout>