<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TasksHome">

    <!-- Header -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blueHeader"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:text="@string/tasks"
            android:textSize="@dimen/textHeaderSize"
            android:textColor="@color/white"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginRight="10dp"
            />

        <Button
            android:id="@+id/configuracionButton"
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:text="@string/configuracionButton"
            android:textSize="20sp"
            android:layout_marginRight="@dimen/horizontalMargin"
            android:background="@android:color/transparent"
            />
    </LinearLayout>

    <!-- GridView -->
    <GridView
        android:id="@+id/tasksGridView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:numColumns="1"
        android:verticalSpacing="10dp"
        android:layout_below="@id/header"
        android:layout_above="@id/footer"
        />

    <!-- Footer -->
    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/round_border"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/agregarTaskButton"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:text="@string/agregarButton"
            android:textSize="25sp"
            android:layout_marginRight="@dimen/horizontalMargin"
            android:background="@android:color/transparent"
            />
        <Button
            android:id="@+id/estadisticasButton"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:textSize="25sp"
            android:text="@string/estadisticasButton"
            android:layout_marginLeft="@dimen/horizontalMargin"
            android:background="@android:color/transparent"
            />
    </LinearLayout>

</RelativeLayout>
