<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/basic_backgroud"
    tools:context=".Configuracion">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloConfiguracion"
        android:background="@drawable/title_border"
        android:gravity="center"
        android:fontFamily="sans-serif-light"
        android:paddingVertical="10dp"
        android:textColor="@color/white"
        android:textSize="@dimen/textHeaderSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/showTasksTittle"
            android:gravity="center"
            android:fontFamily="sans-serif-light"
            android:paddingVertical="10dp"
            android:textColor="@color/colorTextBlack"
            android:textSize="28sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_purple_box"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <GridView
                android:id="@+id/tasksGridViewConf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@android:color/darker_gray"
                android:dividerHeight="0.5dp"
                android:indicatorRight="?android:attr/expandableListPreferredItemIndicatorRight" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <EditText
                    android:id="@+id/categoryInput"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:hint="@string/category_hint"
                    android:background="@android:drawable/edit_text"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:inputType="text" />

                <Button
                    android:id="@+id/addCategoryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search"
                    android:layout_marginStart="8dp"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <Button
                    android:id="@+id/categorySwitch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:backgroundTint="@color/purpleBackground"
                    android:gravity="center"
                    android:text="Categorías"/>


            </LinearLayout>
            <LinearLayout
                android:id="@+id/layoutCat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

            </LinearLayout>


        </TableLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <CheckBox

            android:text="Mostrar tareas terminadas:"
            android:id="@+id/showFinishedTasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:gravity="end"
            android:textSize="18sp"
            android:checked="false"/>

    </LinearLayout>
</LinearLayout>
